# ChangeLog for net-p2p/mldonkey
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/mldonkey/ChangeLog,v 1.131 2006/10/15 13:37:52 agriffis Exp $

  15 Oct 2006; Aron Griffis <agriffis@gentoo.org> mldonkey-2.7.7.ebuild:
  Mark 2.7.7 stable on ia64. #138373

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> mldonkey-2.7.7.ebuild:
  Stable on hppa wrt #138373

  12 Sep 2006; Joshua Jackson <tsunam@gentoo.org> mldonkey-2.7.7.ebuild:
  Stable x86; bug #137373

  05 Sep 2006; Joseph Jezak <josejx@gentoo.org> mldonkey-2.7.7.ebuild:
  Marked ppc stable for bug #138373.

  02 Sep 2006; <blubb@gentoo.org> mldonkey-2.7.7.ebuild:
  stable on amd64

  09 Aug 2006; Joshua Jackson <tsunam@gentoo.org> mldonkey-2.7.7.ebuild:
  Stable x86; bug #138373

  05 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org> mldonkey-2.7.7.ebuild:
  Keyworded ~sparc wrt #139014, use ~sparc ocaml

*mldonkey-2.7.7 (20 Jun 2006)

  20 Jun 2006; Jon Hood <squinky86@gentoo.org> -mldonkey-2.7.6.ebuild,
  +mldonkey-2.7.7.ebuild:
  Version bump, remove buggy version. Resolves #137314. Thanks spiralvoice
  <spiralvoice@hotmail.com>!

*mldonkey-2.7.6-r1 (18 Jun 2006)

  18 Jun 2006; Karol Wojtaszek <sekretarz@gentoo.org>
  +files/mldonkey-2.7.6-magic.patch, +mldonkey-2.7.6-r1.ebuild:
  Add patch which fixes a serious performance problem when MLDonkey
  downloads lots of new files or torrents with a lot (>100) subfiles, bug #136700

  09 Jun 2006; Karol Wojtaszek <sekretarz@gentoo.org>
  -mldonkey-2.5.21-r2.ebuild, -mldonkey-2.6.5.ebuild,
  -mldonkey-2.6.7.ebuild, -mldonkey-2.7.5.ebuild:
  Ebuild clean up

*mldonkey-2.7.6 (09 Jun 2006)

  09 Jun 2006; Karol Wojtaszek <sekretarz@gentoo.org>
  +mldonkey-2.7.6.ebuild:
  Version bump. Removed threads USE flag. Bug #133944 and #127016

*mldonkey-2.7.5 (18 May 2006)

  18 May 2006; Jon Hood <squinky86@gentoo.org>
  -files/mldonkey-2.5.16-configure.patch,
  -files/mldonkey-2.5.21-configure.patch,