@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX dp500.patch 505 RMD160 25b27b4b5129a434ff0db1cd5b230e5df4c2bc5b SHA1 3fcda76acd0968b12d0a06876e4d541950d7d7e6 SHA256 aea135f1d4ad3883cc5a41ab0c167e6057aa82494cbc80781ae5fb3cf606591a
 MD5 2cce9c1b250bd7b652e39c93bfbe11b6 files/dp500.patch 505
 RMD160 25b27b4b5129a434ff0db1cd5b230e5df4c2bc5b files/dp500.patch 505
@@ -35,6 +38,7 @@ DIST mldonkey-2.6.4.tar.bz2 2669228
 DIST mldonkey-2.7.3.tar.bz2 2807272
 DIST mldonkey-2.7.6.tar.bz2 2835134 RMD160 8989e86e26b6b4ed4fc8f783093c6e187b6d5051 SHA1 330c5b9c56f5fc09f2ca8a66090d96148253a2de SHA256 ec5e5723cc54c4ac3ef93e0b78ed9da58c4e75ca09fa4b2de4c9a58740085fa8
 DIST mldonkey-2.7.7.tar.bz2 2847137 RMD160 44c61e368354d961adf6e7b125d0036eb4bde946 SHA1 9cce5d072e8eae5440af7607c4557e1554dff276 SHA256 8759345bf699b3b349d6db944b36c4f60a5cedf7e314eabf6b3817b8f1052958
+DIST mldonkey-2.8.2.tar.bz2 2652074 RMD160 ce95184805ac8f4c690e37c75d418b5f7e265f92 SHA1 510fad86b4c83b54a7e8836cec3a3f30d67aed8a SHA256 51efc1c339b8cbafde93f4444f18e4243f41008b1c4107a41602542e9eeaa68e
 DIST mldonkey_protocol_handler-1.7.xpi 5502
 DIST patch_pack16u.gz 52798
 EBUILD mldonkey-2.5.16-r9.ebuild 2660 RMD160 e53603314d4a4f824f3b7abed58e00221ecfd94b SHA1 91bd30d8a3457db154317de039e4e5e7d7f226d3 SHA256 c861ed600b3ddf704146651ba4231defb0f0633732e69cf48ddf335dcf7d1fe9
@@ -57,10 +61,14 @@ EBUILD mldonkey-2.7.7.ebuild 4467 RMD160 be7e3ed8eb927676b6e3c9f08be7bfe08034697
 MD5 267ffcdbe7693de4ad72ced261524758 mldonkey-2.7.7.ebuild 4467
 RMD160 be7e3ed8eb927676b6e3c9f08be7bfe080346977 mldonkey-2.7.7.ebuild 4467
 SHA256 53616cee7b3fdbd46b2f5c737fb76546143c4ffe04361b0f1949fc92fbc1efd6 mldonkey-2.7.7.ebuild 4467
-MISC ChangeLog 21553 RMD160 dc7fcd92fd36ae1885eef0cfecf63b815c55f8de SHA1 9fb742ade3200a341e5766705f2bf4632e074a43 SHA256 a77c768515dcf8cd11fbbcc05bc428c8782884f44a90fd007cc36e74f44a4cc7
-MD5 a9129432edfb77f4b36dd14c175f5f32 ChangeLog 21553
-RMD160 dc7fcd92fd36ae1885eef0cfecf63b815c55f8de ChangeLog 21553
-SHA256 a77c768515dcf8cd11fbbcc05bc428c8782884f44a90fd007cc36e74f44a4cc7 ChangeLog 21553
+EBUILD mldonkey-2.8.2.ebuild 4596 RMD160 2e5c047e9c2688ef7fa3e96536123c6fea8149e6 SHA1 cf1b0c604330b15f2886b15ccb27c2cea1495743 SHA256 de6f2d4f8af1e0f74fe9e12888d18ee20aeaa6528163f81b41e86d8143b11d9a
+MD5 0723d56c242ea1c821b0d30b0a79cc28 mldonkey-2.8.2.ebuild 4596
+RMD160 2e5c047e9c2688ef7fa3e96536123c6fea8149e6 mldonkey-2.8.2.ebuild 4596
+SHA256 de6f2d4f8af1e0f74fe9e12888d18ee20aeaa6528163f81b41e86d8143b11d9a mldonkey-2.8.2.ebuild 4596
+MISC ChangeLog 21694 RMD160 ed5c80c575ab5bd25a6b612332b8234b5d9c67a0 SHA1 e941f4319f297627a05f00b2c5378738033c714f SHA256 00a36a84d56d2da06cac64d8f68895ccff3a1907651e7b50676b607bdb0d6deb
+MD5 9c434322533815685c61f3e1370c78d8 ChangeLog 21694
+RMD160 ed5c80c575ab5bd25a6b612332b8234b5d9c67a0 ChangeLog 21694
+SHA256 00a36a84d56d2da06cac64d8f68895ccff3a1907651e7b50676b607bdb0d6deb ChangeLog 21694
 MISC metadata.xml 242 RMD160 d0edc89382298dee00d3571b62a5f457ef268751 SHA1 25511186cac54f1353a3347f72da7f5d05b9da57 SHA256 b354d71d5efbed0ff97e27564894438b42a8bd8b577007cadc6972dd37d6b5f8
 MD5 ee159929f3e247f937fe88bb1919d8bd metadata.xml 242
 RMD160 d0edc89382298dee00d3571b62a5f457ef268751 metadata.xml 242
@@ -80,3 +88,13 @@ SHA256 c8a5f39b5b0615d37786156a034015a57a0a79531ab30b57054ed1ab640055a0 files/di
 MD5 ef2cdf6798b804e044d83871458dae1f files/digest-mldonkey-2.7.7 250
 RMD160 48727379719d82f599c405a75030e8ae42b14d4b files/digest-mldonkey-2.7.7 250
 SHA256 4259da6fad3ea758293a8795cbab96ebd293ac70b2bcca938385cb24f37343b7 files/digest-mldonkey-2.7.7 250
+MD5 7a49132cb0108ac570b978eb6000db45 files/digest-mldonkey-2.8.2 250
+RMD160 4213be41a9c4db4d112e40396786dcd55f49436a files/digest-mldonkey-2.8.2 250
+SHA256 cdb85c503837b524df40852095c65b6fe6211fdc48b803c4da5a92554e6286a1 files/digest-mldonkey-2.8.2 250
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFcfKWub4+zaPCR/oRAnEEAKCCmavTH74YMzpm9bh8HzLSWNT5twCeKjqX
+DVyL+xxEQGSmGK/YMCECXi8=
+=DcpI
+-----END PGP SIGNATURE-----
